# CLEAR

./: .gitignore  LICENSE  README.md  book.py  config.py  main.py  prepare_policy.py  pyproject.toml  utilize.py
clear/: db.py  load_model.py  prompt.py  search.py  train_model.py
data/db/: db_lga.csv  db_lga.xlsx  db_policies.csv  db_policies.xlsx  db_suburbs.csv  db_suburbs.xlsx  merge.csv  merge.xlsx
data/query_model/: io_dataset_instruct.json
output/: community_analysis_text  document_analysis_text  email_report_text
output/20250203_234154/: community_analysis_text  data_object.json  document_analysis_text  email_report_text  text_object.json
