[project]
name = "clear"
version = "0.1.0"
description = "CLEAR: Climate Policy Retrieval and Summarization Using LLMs"
authors = [
    { name = "Yutao Wu", email = "oscar.w@deakin.edu.au" },
]
dependencies = [
    "openai==1.54.3",
    "openpyxl==3.1.5",
    "pandas==2.2.3",
    "pdf2image>=1.17.0",
    "pypdf2>=3.0.1",
    "requests>=2.33.0",
    "rich>=13.9.4",
    "tiktoken>=0.8.0",
    "tqdm>=4.67.0",
    "rapidfuzz>=3.10.1",
]
requires-python = ">=3.10"

[project.optional-dependencies]
model = [
    "torch>=2.9.0",
    "transformers>=5.0.0rc3",
]
train = [
    "datasets>=4.8.5",
    "hf-transfer>=0.1.8",
    "peft>=0.13.2",
    "torch>=2.9.0",
    "transformers>=5.0.0rc3",
    "trl>=0.21.0",
    "unsloth",
]

[tool.uv.sources]
unsloth = { git = "https://github.com/unslothai/unsloth.git" }
